Icons in DialogFourierDiagramm are working agian.